# ultimate-rules-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  conversation_history.txt  create_sample_embeddings.py  create_vectorstore.py  create_vectorstore_old.py  docker-compose.yml  frontend_steps.txt  init-db.sh  package-lock.json  package.json  prompts.py  pyproject.toml  query_vectorstore.py  rebuild_vectorstore.sh  requirements.txt  retrieval_results.csv  retrieval_results.json  retriever.py  sample_sentence_embeddings.json  setup_database.sql  test_retriever.py  tools.py  ultimate-rag-basic.py  ultimate_rag_rewrite_only.py  ultimate_rag_rewrite_q_evaluate_context.py
_purgatory/: main.py  package.json  rebuild_vectorstore_eval.sh
backend/: Dockerfile  pyproject.toml  rag_basic.py  rebuild_vectorstore.sh  requirements.txt
backend/src/: db_client.py  prompts.py  rag_chat.py  response_formats.py  retriever.py  simple_gmail_client.py  test_db_client.py
backend/src/api/: app.py
backend/src/clients/: anthropic_client.py  base_client.py  cerebras_client.py  get_abstract_client.py  llm_models.py
chroma_ultimate_rules_db/: chroma.sqlite3
cloudflared/: config.yml
db/: 1-setup_database.sql  setup_database.sql  test_functions.sql
docs/: fasthtml_docs.md
evals/: create_qa_multiple_choice.py  create_qa_pairs.py  create_qa_retrieval.py  evaluate_multiple_choice.py  evaluate_retrieval.py  retrieval_analysis.ipynb  retrieval_testing.py  rules_dataset_gpt-4o-2024-08-06_10q.json  rules_dataset_gpt-4o-mini_5q.json
frontend/: =7.21.4  Dockerfile  craco.config.js  (+2 more)
(+108 files in other folders)
